<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/pop_up_grid_bg"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            app:tint="#333333"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_close_24"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:src="@drawable/cancel_reason_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/booking_request_cancel_dialog_title_text"
            android:fontFamily="sans-serif"
            android:layout_marginTop="15dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#333333"
            android:fontFamily="sans-serif"
            android:text="@string/booking_request_cancel_dialog_sub_title_text"
            android:textSize="16sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/colorEditTextLayoutHintColor"
            android:theme="@style/TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCancellationReason"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:gravity="top"
                android:hint="@string/booking_request_cancel_dialog_cancel_reason_hint"
                android:inputType="textMultiLine"
                android:textColor="@color/colorEditTextTextColor"
                android:theme="@style/TextInputEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            app:cardCornerRadius="6dp"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">



            </LinearLayout>
        </androidx.cardview.widget.CardView>



        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/gradient_button_bg"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/booking_request_cancel_dialog_cancel_reason_submit_button_text"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

    </LinearLayout>
</LinearLayout>