<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.RatingReviewBottomSheetDialog"
    android:orientation="vertical"
    android:background="@android:color/white">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/toolbar_bg"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iVBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:src="@drawable/ic_keyboard_backspace_black_24dp"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="left|center"
            android:paddingLeft="16dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/rate_review_toolbar_title_text"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iVUserImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="0.5dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civUserImageDrawable"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:civ_border_width="0.5dp"
                app:civ_border_color="@color/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvReviewBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/rate_reviewing_service_as_text"
                    android:textColor="#555555"
                    android:textSize="16dp" />


                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text=""
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRateReviewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:padding="3dp"
                android:fontFamily="sans-serif"
                android:text="@string/rate_reviewing_description_text"
                android:textColor="#666666"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/review_message_layout"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:textColorHint="@color/colorEditTextLayoutHintColor"
                android:theme="@style/TextInputLayout"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etReviewMessage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:ems="16"
                    android:gravity="top"
                    android:hint="@string/rate_review_hint"
                    android:inputType="text|textMultiLine"
                    android:maxLines="7"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="16dp"
                    android:scrollbars="vertical"
                    android:textColor="@color/colorEditTextTextColor"
                    android:theme="@style/TextInputEditText"
                    android:visibility="visible" />
            </com.google.android.material.textfield.TextInputLayout>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="5dp"
                android:numStars="5"
                android:stepSize="1"
                android:progressTint="@color/colorPrimaryDark"
                android:secondaryProgressTint="@android:color/transparent"/>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="42dp"
                android:layout_marginBottom="35dp"
                android:background="@drawable/gradient_button_bg"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/rate_submit_review_button_hint"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="18dp" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>